--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ endif ()
 add_executable(dsaa src/main.c
         src/fixed_size_array.c
         src/singly_linked_list.c
-        src/dynamic_array.c)
+        src/dynamic_array.c
+        src/stack.c)
 
 include_directories(${CMAKE_SOURCE_DIR}/include)
