Added basic source files for queue

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ add_executable(dsaa src/main.c
         src/fixed_size_array.c
         src/singly_linked_list.c
         src/dynamic_array.c
-        src/stack.c)
+        src/stack.c
+        src/queue.c)
 
 include_directories(${CMAKE_SOURCE_DIR}/include)
