Added selection sort algorithm

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ add_executable(dsaa src/main.c
         src/stack.c
         src/queue.c
         src/linear_search.c
-        src/binary_search.c)
+        src/binary_search.c
+        src/selection_sort.c)
 
 include_directories(${CMAKE_SOURCE_DIR}/include)
