--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ add_executable(dsaa src/main.c
         src/binary_search.c
         src/selection_sort.c
         src/newton_sqrt.c
-        src/bubble_sort.c)
+        src/bubble_sort.c
+        src/floyd_tortoise_hare.c)
 
 include_directories(${CMAKE_SOURCE_DIR}/include)
