Added counting sort implementation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,7 @@ add_executable(dsaa src/main.c
         src/bubble_sort.c
         src/floyd_tortoise_hare.c
         src/doubly_linked_list.c
-        src/hash_table.c)
+        src/hash_table.c
+        src/counting_sort.c)
 
 include_directories(${CMAKE_SOURCE_DIR}/include)
