Added implementation for linear congruential generator algorithm

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ add_executable(dsaa src/main.c
         src/doubly_linked_list.c
         src/hash_table.c
         src/counting_sort.c
-        src/binary_tree.c)
+        src/binary_tree.c
+        src/linear_congruential_generator.c)
 
 include_directories(${CMAKE_SOURCE_DIR}/include)
