--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ add_executable(dsaa src/main.c
         src/hash_table.c
         src/counting_sort.c
         src/binary_tree.c
-        src/linear_congruential_generator.c)
+        src/linear_congruential_generator.c
+        src/sleep_sort.c)
 
 include_directories(${CMAKE_SOURCE_DIR}/include)
