Added initial source files for quick sort

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,7 @@ add_executable(dsaa src/main.c
         src/counting_sort.c
         src/binary_tree.c
         src/linear_congruential_generator.c
-        src/sleep_sort.c)
+        src/sleep_sort.c
+        src/quick_sort.c)
 
 include_directories(${CMAKE_SOURCE_DIR}/include)
